added getAllUser, editUser
